Thu Dec 28 23:30:43 2000  Robin Ericsson  <robin@noname4us.com>

	* src/amcl.c [main]: save_plugins() removed.
	* src/init.c: Removed some global variables.
	[about_window]: Added a gnome_href widget to gnome-mud
	homepage.
	[do_close]: Fix for not closing main_window.
	* src/modules.c [do_plugin_information]: rebuild the
	window, and saves for plugins now uses gnome_config_*.
	[save_plugins]: removed.
	* src/modules_api.c: Commented out some code.
	* src/prefs.c [open_file]: Added some more debug.

Thu Dec 28 09:51:45 2000  Robin Ericsson  <robin@noname4us.com>

	* Makefile.am: Added manpage.
	* amcl.1: Manpage added.

Wed Dec 27 18:03:55 2000  Robin Ericsson  <lobbin@localhost.nu>

	* TODO: removed some outdated stuff
	* po/*.po: Made another update-po and edited the sv and de.po
	* src/init.c [destroy]: Added yes/no question when quitting amcl.
	Also saving the command history here.
	* src/modules_api.c [plugin_register_menu]: Commented out some
	variables.
	* src/net.c: Removed some unused variables.
	* src/prefs.c [save_prefs]: Save Command history as a vector.
	* src/telnet.c: [pre_process]: changed == to =, as it wasn't
	an if statement ;)

Tue Dec 26 10:37:32 2000  Jordi Mallach  <jordi@sindominio.net>
	* TODO: added some GNOME specific items.
	* Moved some items to "Under Development".

Tue Dec 26 15:42:34 2000  Robin Ericsson  <lobbin@localhost.nu>

	* po/ca.po, de.po, es.po, sv: make update-po,

	* src/.cvsignore: Added TAGS and tags.

	* src/amcl.h [system_data]: gint History; added.

	* src/data.c: Removed include for gtk.h and added gnome.h
	instead.

	* src/init.c [text_entry_select_child_cb]: Changes EntryCurr
	if the combo box changes the textentry.
	[do_disconnect]: disconnect only if connected.
	(toolbar_menu[]): added variable for setting toolbar.
	[init_window]: changed text_entry into a combo box to make it
	look more like zmud.

	* src/modules_api.c: Commented out code for adding a menuitem
	from a plugin.
