@@ -1,8 +1,8 @@
 CFLAGS    += $(DEBUG_FLAGS)
 SUBDIRS    = intl po src plugins
 
-man_MANS   = amcl.1
+man_MANS   = gnome-mud.1
 
-EXTRA_DIST = AUTHORS BUGS COPYING ChangeLog INSTALL \
-	     Makefile.in NEWS README TODO VERSION configure configure.in \
-             ABOUT-NLS install-sh mkinstalldirs amcl.lsm acconfig.h $(man_MANS)
+EXTRA_DIST =	AUTHORS BUGS COPYING ChangeLog INSTALL Makefile.in NEWS \
+		README TODO VERSION configure configure.in ABOUT-NLS \
+		install-sh mkinstalldirs amcl.lsm acconfig.h $(man_MANS)
