@@ -1,0 +1,42 @@
+.\" Hey, EMACS: -*- nroff -*-
+.\" gnome-mud.1 is copyright 2000-2001 by
+.\" Jordi Mallach <jordi@sindominio.net>
+.\"
+.\" This is free documentation, see the latest version of the GNU General
+.\" Public License for copying conditions. There is NO warranty.
+.\"
+.TH AMCL 1 "January  4, 2001"
+.SH NAME
+gnome-mud \- a mud client for the GNOME Desktop Environment.
+.SH SYNOPSIS
+.B gnome-mud
+.RI [ options ]
+.SH DESCRIPTION
+This manual page documents briefly the
+.B gnome-mud
+command.
+.PP
+\fBGnome-mud\fP is a MUD client written in Gtk+ and GNOME-libs. At the
+moment, it supports multiple connections, aliases, variables, triggers,
+ANSI colors, custom keybindings, MCCP and other features. Gnome-mud also has
+a plugin system similar to zMUD's, so adding new functionality should be
+easy at user level.
+.SH OPTIONS
+Generic GNOME and GTK options can be accessed using the --help flag.
+.TP
+.B \-?, \-\-help
+Show summary of available options
+.TP
+.B \-\-usage
+Display brief usage message
+.TP
+.B \-V, \-\-version
+Print version of Gnome-mud
+.TP
+.B \-\-display=DISPLAY
+Specify an X display where gnome-mud should connect to
+.SH AUTHOR
+This manual page was written by Jordi Mallach <jordi@debian.org>,
+for the Debian GNU/Linux system (but may be used by others).
+Robin Ericson <lobbin@localhost.nu> is the main author. You can find more
+information in the AUTHORS file in /usr/share/doc/amcl.
